Stop the icons jumping around when previewing

--- a/app/webpacker/styles/_lesson-parts.scss
+++ b/app/webpacker/styles/_lesson-parts.scss
@@ -26,21 +26,18 @@
       align-items: center;
 
       .counter {
-        flex: 1 50%;
-        display: flex;
         align-items: baseline;
+        height: 5rem;
 
         @include govuk-font($size: 48, $weight: bold);
         color: govuk-shade(govuk-colour('dark-grey'), 10);
       }
 
       .teaching-methods {
-        flex: 1 50%;
         display: flex;
-        align-items: center;
+        flex-grow: 1;
         flex-direction: column;
       }
-
     }
 
     .alternatives {
